# Meduzzen_intership

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: Dockerfile  docker-compose.yml  pyproject.toml  sample.env
app/app/: main.py
app/db/: credentials.py
core/: config.py  security.py
db/: base.py  company.py  credentials.py  quiz.py  users.py
endpoints/: auth.py  companies.py  depends.py  quizzes.py  statistic.py  users.py
migrations/: env.py
migrations/versions/: 224f604f70ff_init_all_tables.py  5875f157aef3_added_required_tables.py  a2d8c67c855f_init.py  a4c0fde6b770_init_all_tables.py  abce47a144b2_init.py  b76da683de6f_init_all_tables.py  e7292fe924fb_added_required_tables.py  fccef99e23d3_update_company_users.py  fe454808510e_init.py
models/: company.py  quiz.py  schemas.py  statistic.py  token.py  user.py
repositories/: company.py  export_files.py  quiz.py  statistic.py  users.py
