[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
databases = {extras = ["postgresql"], version = "^0.6.1"}
redis = "^4.3.4"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
alembic = "^1.8.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.4"
bcrypt = "^4.0.1"
jose = "^1.0.0"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
